--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Antivirus login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="contaienr">
+        <div class="login-animate"></div>
+        <div class="login-form"> </div>
+    </div>
 </body>
 </html>
