done section login-animate

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <div class="contaienr">
-        <div class="login-animate"></div>
+        <div class="login-animate">
+            <div class="security">
+                <img src="./security.svg" alt="security">
+            </div>
+             <div class="circle-radar">
+                 <div class="circle circle1"></div>
+                 <div class="circle circle2"></div>
+                 <div class="circle circle3"></div>
+                 <div class="circle circle4"></div>
+                 <div class="circle circle5"></div>
+             </div>
+            <p class="anti">Antivirus</p>
+        </div>
         <div class="login-form"> </div>
     </div>
 </body>
