--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
           <form>
             <h2 class="login-title">ورود به حساب کاربری</h2>
             <p class="login-sub-title">جهت ورود به برنامه نام کاربری ورمزعبور خود را وارد نمایید</p>
-            <div>
+            <div class="main-username">
               <i class="fa fa-user"></i>
               <input type="text" class="username" placeholder="پست الکترونیکی" />
             </div>
-            <div>
+            <div class="main-password">
               <i class="fa fa-lock"></i>
               <input type="password" class="password" placeholder="رمز عبور" />
             </div>
